tests/errors/intrinsics_05.f90
program intrinsics_05
    print *, ior(1, 1_8)
end program